fix: MavenBinaryInstaller Setting loose POSIX file permissions is security-sensitive java:S2612 #532 - added commons-lang3 dependency to webforj-install-bbj-plugin pom.xml - using SystemUtils to test for MAC or Linux systems, avoiding setting posix permissions on windows. - Using PosixFilePermission constants to set the permissions for mvn and mvn.cmd to rwxr-xr-x - clean up imports.